# jucevlc

./: .gitignore  .gitmodules  .hgignore  BUILD.txt  CMakeLists.txt  README.md  README.txt  UnregisteredFilters.htm  immomedia.pfx  install.nsi  nisedit.lnk  resources.rc  vlcfrontend.cbp  vlcfrontend.exe.embed.manifest  vlcfrontend.sln  vlcfrontend.vcxproj  vlcfrontend.vcxproj.filters
CodeLiteWorkspace/: CodeLiteWorkspace.workspace  CodeLiteWorkspace.workspace.m  CodeLiteWorkspace.workspace.session  Makefile  cscope_file.list
CodeLiteWorkspace/JuceVLC/: JuceVLC.mk  JuceVLC.project  JuceVLC.txt
contrib/libvlc/lib/: libvlc.exp  libvlc.lib  libvlccore.exp  libvlccore.lib
contrib/libvlc/lib64/: genlib.bat  libvlc.def  libvlc.exp  libvlc.lib  libvlccore.def  libvlccore.exp  libvlccore.lib
juce/: AppConfig.h  juce.h
juce/modules/juce_core/: juce_core.cpp
juce/modules/juce_core/memory/: juce_Atomic.h
juce/modules/juce_core/native/: juce_BasicNativeHeaders.h  juce_win32_ComSmartPtr.h  juce_win32_Network.cpp  juce_win32_Registry.cpp  juce_win32_SystemStats.cpp
juce/modules/juce_core/text/: juce_StringArray.h
juce/modules/juce_graphics/: juce_graphics.cpp
juce/modules/juce_graphics/geometry/: juce_EdgeTable.cpp
juce/modules/juce_gui_basics/components/: juce_Desktop.cpp  juce_Desktop.h
juce/modules/juce_gui_basics/filebrowser/: juce_FileTreeComponent.cpp  juce_FileTreeComponent.h
juce/modules/juce_gui_basics/native/: juce_win32_Windowing.cpp
juce/modules/juce_gui_basics/widgets/: juce_TreeView.h
juce/modules/juce_opengl/: juce_opengl.h
juce/modules/juce_opengl/native/: juce_MissingGLDefinitions.h
juce/modules/juce_video/: juce_video.cpp
juce/modules/juce_video/native/: juce_win32_DirectShowComponent.cpp
juce/modules/juce_video/playback/: juce_DirectShowComponent.h
libvlc/include/vlc/: libvlc_version.h
libvlc/include/vlc/plugins/: vlc_about.h  vlc_common.h
libvlc/lib/: libvlc.lib  libvlccore.lib
libvlc/lib/pkgconfig/: libvlc.pc  vlc-plugin.pc
src/: AbstractMenu.cpp  AbstractMenu.h  AppProportionnalComponent.cpp  AppProportionnalComponent.h  BigFileTree.cpp  BigFileTree.h  CMakeLists.txt  ControlComponent.cpp  ControlComponent.h  Execute.cpp  Execute.h  Extensions.cpp  Extensions.h  FileSorter.cpp  FileSorter.h  FontResource.cpp  FontResource.h  FontSerialization.cpp  FontSerialization.h  HueSelector.h  IconMenu.cpp  IconMenu.h  Icons.cpp  Icons.h  ImageCatalog.cpp  ImageCatalog.h  ImageCatalogCache.cpp  ImageCatalogCache.h  ImagesTheme.cpp  ImagesTheme.h  InvokeLater.cpp  InvokeLater.h  Languages.cpp  Languages.h  LookNFeel.h  Main.cpp  MainComponent.cpp  MainComponent.h  MenuBase.cpp  MenuBase.h  (+35 more)
vf/modules/vf_core/: vf_core.h
vf/modules/vf_core/functor/: vf_Bind.h
vf/modules/vf_core/native/: vf_win32_FPUFlags.cpp
vf/modules/vf_unfinished/: vf_unfinished.h
web/: default.css  index.html  pad_file.xml  site.html  wiki.txt
